# auto-chart-engine

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality.yml
1-splitter_models/: spleeter_model.ipynb  split_midi.ipynb  test_split_midi.ipynb
2-midi_translation/: basic_pitch.ipynb
3-chart_creation/: librosa.ipynb  midi_to_chart.ipynb  midi_to_chart.py  test_midi_to_chart.ipynb
ace/: __main__.py  charter.py  translate.py
ace.egg-info/: PKG-INFO  SOURCES.txt
ace/data/: file_data.py
ace/tests/: __init__.py  test_file_data.py  test_translate.py
auto_chart_engine.egg-info/: PKG-INFO  SOURCES.txt
notebooks/chart_creation/: midi_to_chart.ipynb  test_midi_to_chart.ipynb
notebooks/music_sheet_input/: omr_experiment.ipynb
notebooks/splitting/: split_midi.ipynb  test_split_midi.ipynb
songs/: 01 Blackout.wma  02 Fly Away.wma  02 Monkey Wrench.wma  04 Smashing Young Man.wma
songs/raw_songs/: 01 Blackout.wma  01 Live Wire.wma  02 Fly Away.wma  02 Monkey Wrench.wma  04 Smashing Young Man.wma  07 Gel.wma  08 Track 8.wma  09 Little Guitars.wma
splitter_models/: spleeter_model.ipynb
