[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-chart-engine"
version = "2.0.1"
authors = [
  {name = "Ryan Roche"},
  {name = "Bryant Vencill"}
]
description = "This project streamlines drum charting for Clone Hero - the free PC rhythm game inspired by Guitar Hero/Rock Band. It generates highly accurate, playable drum charts directly from MIDI files. The engine dramatically reduces the time and effort needed to create custom drum charts to enable efficient creation of multiple songs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "mido",
  "rich",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
  "Intended Audience :: End Users/Desktop",
]

[tool.setuptools]
packages = ["ace"]


[project.urls]
"Homepage" = "https://github.com/ryan-w-roche/auto-chart-engine"